unpackaged/main/default/objects/zkfedex__BulkShipmentStatus__c/zkfedex__BulkShipmentStatus__c.object-meta.xml
<CustomObject>
    <label>FedEx Bulk Shipment Status</label>
    <nameField>
        <displayFormat>Bulk-Ship-Status-{00000000}</displayFormat>
        <label>Bulk Shipment Status Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx Bulk Shipment Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>