unpackaged/main/default/objects/zkfedex__BulkShipmentStatus__c/fields/zkfedex__BatchId__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BatchId__c</fullName>
    <label>Batch ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>