unpackaged/main/default/objects/zkfedex__BulkShipmentStatus__c/fields/zkfedex__BulkShipment__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BulkShipment__c</fullName>
    <label>Bulk Shipment</label>
    <referenceTo>zkfedex__BulkShipment__c</referenceTo>
    <relationshipLabel>FedEx Bulk Shipment Status</relationshipLabel>
    <relationshipName>FedEx_Bulk_Shipment_Status</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>