unpackaged/main/default/objects/zkfedex__BulkShipmentStatus__c/fields/zkfedex__Status__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>VALIDATION_COMPLETED</fullName>
            </value>
            <value>
                <fullName>PROCESSING_COMPLETED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>